update prime style

--- a/_scss/_dove/helper.scss
+++ b/_scss/_dove/helper.scss
@@ -3,14 +3,16 @@
 // ---------------------------------------------------------------
 .n { font-weight:inherit; font-style:inherit }
 
-.sans { font-family: 'Arial', system-ui, sans-serif }
-.serif { font-family: 'Times New Roman', 'Times', serif }
-.mono { font-family: 'Courier New', 'Courier', monospace, monospace }
+.sans { font-family: "Roboto", "Arial", system-ui, sans-serif }
+.serif { font-family: "Times New Roman", "Times", serif }
+.mono { font-family: "Source Code Pro", "Courier New", "Courier", monospace, monospace }
 
 .small { font-size:.9em }
 .smaller { font-size:.8em }
 
 .scrollable { overflow:auto }
+.scroll_x { overflow-x:scroll }
+.scroll_y { overflow-y:scroll }
 
 .pointer { cursor:pointer }
 
@@ -22,8 +24,8 @@
 .fill { flex:1 }
 .fit  { flex:0 }
 
-.width-full { width: 100% }
-.width-fit  { max-width: 100% }
+.width-full { width:100% }
+.width-fit  { max-width:100% }
 
 .float-left  { float:left }
 .float-right { float:right }
@@ -40,20 +42,21 @@
   font-size:2.5em;
   margin-block-start:.67em;
   margin-block-end:.67em;
-  font-weight: bold;
+  font-weight:bold;
   line-height:1;
 }
 
 .indent{text-indent:2em}
-.big-first.indent{text-indent:0}
-.big-first.indent::first-letter{margin-left:2em}
-.big-first::first-letter{
-  float:left;
-  font-size:4em;
-  font-weight:700;
-  line-height:.9;
-  margin-right:.1em;
-  font-family:"Georgia","Constantia,Cambria","Book Antiqua","Palatino Linotype","Big Caslon",serif;
+.big-first {
+  &.indent{text-indent:0;&::first-letter{margin-left:2em}}
+  &::first-letter{
+    float:left;
+    font-size:4em;
+    font-weight:700;
+    line-height:.9;
+    margin-right:.1em;
+    font-family: "Georgia", "Constantia,Cambria", "Book Antiqua", "Palatino Linotype", "Big Caslon", serif;
+  }
 }
 
 .button {
@@ -64,6 +67,46 @@
   margin:.25rem .25rem;
   border-radius:.25em;
   line-height:1;
+}
+
+.icon { font-style:normal }
+.itext,
+.isvg {
+  @extend .inblock;
+  width:1em;
+  height:1em;
+  vertical-align:text-bottom;
+  text-align:center;
+  line-height:1;
+}
+.isvg svg {
+  @extend .inblock;
+  width:1em;
+  height:1em;
+}
+
+.list-lower-roman { list-style:lower-roman }
+.list-lower-alpha { list-style:lower-alpha }
+
+table {
+  &.simple { td, th { border-width:1px 0 !important } }
+  &.borderless { &, tr, td, th { border:0 !important } }
+}
+
+.task-list { list-style:none }
+.task-list-item-checkbox {
+  margin:0 .5em;
+  height:1em;
+  width:1em;
+  vertical-align:text-bottom;
+}
+
+.footnote { padding:0 .25em }
+.footnote,
+.reversefootnote { text-decoration:none !important }
+.footnotes {
+  font-size:.9em;
+  li::marker {font-size:.8em}
 }
 
 .box { box-sizing:border-box; @extend .ba; @extend .pa_5; }
@@ -118,54 +161,6 @@
 .mt,.mv { margin-top:1em }
 .mb,.mv { margin-bottom:1em }
 
-.icon { font-style:normal }
-.itext,
-.isvg {
-  @extend .inblock;
-  width:1em;
-  height:1em;
-  vertical-align:text-bottom;
-  text-align: center;
-  line-height:1;
-}
-.isvg svg {
-  @extend .inblock;
-  width:1em;
-  height:1em;
-}
-
-.list-lower-roman { list-style:lower-roman }
-.list-lower-alpha { list-style:lower-alpha }
-
-table.simple { td, th { border-width:1px 0 !important } }
-table.borderless { &, tr, td, th { border:0 !important } }
-
-.task-list { list-style:none }
-.task-list-item-checkbox {
-  margin:0 .5em;
-  height:1em;
-  width:1em;
-  vertical-align:text-bottom;
-}
-
-.footnote { padding:0 .25em }
-.footnote,
-.reversefootnote { text-decoration:none !important }
-.footnotes {
-  font-size:.9em;
-  li::marker {font-size:.8em}
-}
-
-article {
-  .no_max_height pre.highlight { max-height:none !important }
-}
-
-.no_u { text-decoration:none !important }
-.no_wrap { white-space:nowrap !important }
-.hide { display:none !important }
-
-// ---------------------------------------------------------------
-
 .bg-primary{ @extend .bg-blue; }
 .bg-secondary{ @extend .bg-slategrey; }
 .bg-slategray{ @extend .bg-slategrey; }
@@ -214,3 +209,11 @@ article {
 .border-purple{border-color:$text-purple !important}
 .border-yellow{border-color:$text-yellow !important}
 .border-orange{border-color:$text-orange !important}
+
+.no_max_height pre.highlight { max-height:none !important }
+
+.inherit_color { color:inherit !important }
+.no_bg { background:none !important; }
+.no_u { text-decoration:none !important }
+.no_wrap { white-space:nowrap !important }
+.hide { display:none !important }
