--- a/_layouts/primer.html
+++ b/_layouts/primer.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     {% seo %}
+    <style>
+      .isvg svg { width:1em;height:1em }
+    </style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/primer/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}" />
   </head>
   <body>
