--- a/_layouts/prime.html
+++ b/_layouts/prime.html
@@ -9,6 +9,9 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=5.0,shrink-to-fit=no" />
     <meta id="_theme-color"  name="theme-color"  content="{{ page.theme_color | default: site.theme_color | default: '' }}" />
     <meta id="_color-scheme" name="color-scheme" content="{{ page.color_scheme | default: site.color_scheme | default: 'light dark' }}" />
+    <style>
+      .isvg svg { width:1em;height:1em }
+    </style>
     <link id="_style" rel="stylesheet" href="{{ site.base_url }}/assets/prime/css/style.css?r={{ site.revision | default: '0' }}.{{ site.github.build_revision | default: '0' }}" />
     {% include layout_head.html %}
     <!--[if lt IE 9]><script src="//unpkg.com/html5shiv@3.7.3/dist/html5shiv.min.js"><![endif]-->
@@ -43,7 +46,7 @@
                 </div>
               </article>
             </main>
-            <footer class="_footer footer mt-5">
+            <footer class="_footer footer">
               <div class="_layout">
                 {% if page.use_footer == false -%}
                 <style>._footer{display:none !important}</style>
