--- a/_includes/logo.html
+++ b/_includes/logo.html
@@ -1,1 +1,5 @@
+{%- if site.github.repository_nwo == 'techie-joe/dove' %}
+{%- include dove/logo.html %}
+{%- else %}
 <span class="_logo"><a href="{{ site.home_url }}/">{{ site.title | default: "(untitled)" }}</a></span>
+{%- endif %}
