--- a/_source/index.html.pug
+++ b/_source/index.html.pug
@@ -26,7 +26,9 @@ block content
         li: +site_nav('nova')
         li: +site_nav('prime')
   +thin_hr
+  |{%- if site.github.environment == 'development' -%}
   +include('nav_test','dove/nav_test.md')
+  |{%- endif %}
   +thin_hr
   p.text-grey These are supporting posts and pages for development purposes.
   //- - exclude_pages = [ ].join(",");
