--- a/_source/prime/test.html.pug
+++ b/_source/prime/test.html.pug
@@ -3,5 +3,5 @@ block append vars
   - path   = 'test.html'
   - title  = `Test`
 block content
-  +capture('test')|{% include test.md %}
-  +l|{{ test | markdownify }}
+  h1 !{title}
+  +include('test','test.md')
