--- a/_source/_layouts/_mixins.pug
+++ b/_source/_layouts/_mixins.pug
@@ -43,6 +43,10 @@ mixin include(id='',path='',filter=" | markdownify")
   +capture(id)!=`{%- include ${path} %}`
   +l!=`{{ ${id}${filter} }}`
 
+mixin include_relative(id='',path='',filter=" | markdownify")
+  +capture(id)!=`{%- include_relative ${path} %}`
+  +l!=`{{ ${id}${filter} }}`
+
 mixin css(href,media)
   link(rel="stylesheet" media=media||'all' href=href)&attributes(attributes)/
 
