--- a/_source/core/_html.pug
+++ b/_source/core/_html.pug
@@ -1,7 +1,20 @@
 extends /_source/_layouts/core
+mixin site_nav(sub)
+  +sna(sub+"/"): b !{capitalize(sub)}
+  +angle
+  +sna(sub+"/preview.html")| Preview
+  +bull
+  +sna(sub+"/home.html")| Home
+  +bull
+  +sna(sub+"/page.html")| Page
+  +bull
+  +sna(sub+"/404.html")| 404
 block append update_vars
   - path  = ['core',path].join('/')
 block append front_matter
   +l| index: false
 block nav
   div: +site_nav('core')
+block footer
+  +thin_hr
+  p.text-right.text-grey: small: +edit_link(path)
