--- a/_source/prime/legacy.html.pug
+++ b/_source/prime/legacy.html.pug
@@ -3,8 +3,7 @@ block append vars
   - path   = 'legacy.html'
   - title  = `Legacy`
 block content
-  +capture('legacy')|{% include legacy.md %}
-  +l|{{ legacy | markdownify }}
+  +include('legacy','preview-legacy.md')
 block footer
   +thin_hr
   p.text-right.text-grey: small: +edit_link(path)
