update prime nav

--- a/_source/index.html.pug
+++ b/_source/index.html.pug
@@ -8,6 +8,8 @@ mixin site_nav(sub)
   +bull
   +sna(sub+"/page.html")| Page
   +bull
+  +sna(sub+"/post.html")| Post
+  +bull
   +sna(sub+"/404.html")| 404
 block append vars
   - path   = 'index.html'
