--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,8 +1,4 @@
 ---
-layout: default
+layout: prime-page
 ---
 {{ content }}
-
-<hr/>
-<h2>Other pages</h2>
-{% capture pages -%}{% include pages.md %}{%- endcapture %}{{ pages | markdownify }}
