--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,4 @@
 ---
-layout: default
+layout: prime-post
 ---
 {{ content }}
-
-<hr/>
-<h2>Other posts</h2>
-{% capture posts -%}{% include posts.md %}{%- endcapture %}{{ posts | markdownify }}
