--- a/_source/prime/legacy.html.pug
+++ b/_source/prime/legacy.html.pug
@@ -5,5 +5,5 @@ block append vars
 block content
   +include('legacy','preview-legacy.md')
 block footer
-  +thin_hr
-  p.text-right.text-grey: small: +edit_link(path)
+  //- no site footer
+  +_edit_link
