--- a/_scss/mallet/css/_mallet.scss
+++ b/_scss/mallet/css/_mallet.scss
@@ -4,5 +4,5 @@ body{color:#444}._dark body{color:#bbb}h1,h2,h3,h4,h5,h6{color:#000}._dark h1,._
 #_header-bar h1 { display:inline-block; margin:0; border:0; padding:0; font-size:1.2rem; line-height:1.5rem; }
 #_title,#_header-bar #_title a{color:#888}
 #_header-bar #_title a:hover{color: #4660e1}
-#_hero-title{font-size:3em;font-weight:bold;border:0;padding:0}
+._hero-title{font-size:3em;font-weight:bold;border:0;padding:0}
 #_credit { font-size: .83rem; position: absolute; position: fixed; bottom: 6px; right: 6px; left: auto; top: auto; padding: .2rem .4rem; box-shadow: 0 0 4px #0007; border-radius: 5px; color: #fff; text-decoration: none; background: #000; }
