--- a/_source/prime/page.html.pug
+++ b/_source/prime/page.html.pug
@@ -2,7 +2,7 @@ extends _html
 block append vars
   - path   = 'page.html'
   - title  = `Page`
-  - description = 'Page template'
+  - description = 'Page template.'
 block content
   h1 Page title
   p: code // page content
