--- a/_source/prime/post.html.pug
+++ b/_source/prime/post.html.pug
@@ -2,7 +2,7 @@ extends _html
 block append vars
   - path   = 'post.html'
   - title  = `Post`
-  - description = 'Post template'
+  - description = 'Post template.'
 block content
   h1 Post title
   p: code // post content
