--- a/_source/prime/404.html.pug
+++ b/_source/prime/404.html.pug
@@ -7,5 +7,4 @@ block content
   +l|{%- include 404.md title="Oops! Nothing found" %}
 block footer
   //- no site footer
-  +thin_hr
-  p.text-right.text-grey: small: +edit_link(path)
+  +_edit_link
