--- a/_source/prime/test_code-blocks.html.pug
+++ b/_source/prime/test_code-blocks.html.pug
@@ -3,7 +3,7 @@ block append vars
   - path   = 'test_code-blocks.html'
   - title  = `Test Code Blocks`
 block content
-  nav.mv: +test_nav('prime')
+  nav.mv: +test_nav(sub)
   +thin_hr
   +include('code-blocks','test_code-blocks.md')
 block footer
